font family and background changed

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
         <div class="details">
           <section>Pressure <br />123</section>
-          humidity<br />
-          4343
+          <section>
+            humidity<br />
+            4343
+          </section>
           <section>
             Visibility <br />
             1324
