--- a/index.html
+++ b/index.html
@@ -7,7 +7,51 @@
   </head>
   <body>
     <div class="container">
-      <!-- options  -->
+      <div class="search">
+        <input value="USA" title="choose your country" />
+        <select id="Days">
+          <option value="Today">Today</option>
+          <option value="Tomorrow">Tomorrow</option>
+          <option value="#">...</option>
+          <option value="#">...</option>
+        </select>
+      </div>
+
+      <div class="trunk">
+        <div class="general">
+          <img src="" alt="Wealther" />
+          <p>
+            <span>....°</span>
+            <span>During</span>
+          </p>
+        </div>
+        <div class="details">
+          <section id="pressure">Pressure <br />123</section>
+          <section id="humidity">
+            Humidity<br />
+            4343
+          </section>
+          <section id="visibility">
+            Visibility <br />
+            1324
+          </section>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
+
+<!--
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Weather</title>
+  </head>
+  <body>
+    <div class="container">
+    
       <div class="paramter">
         <div class="options" title="choose one day">
           <input value="USA" title="choose your country" />
@@ -33,17 +77,21 @@
         <header>Description</header>
 
         <div class="details">
-          <section>Pressure <br />123</section>
-          <section>
-            humidity<br />
+          <section id="pressure">Pressure <br />123</section>
+          <section id="humidity">
+            Humidity<br />
             4343
           </section>
-          <section>
+          <section id="visibility">
             Visibility <br />
             1324
           </section>
         </div>
       </div>
     </div>
+    <script src="dynamism.js"></script>
   </body>
 </html>
+
+
+-->
