--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
       </div>
 
       <div class="trunk">
+        <header>Monday 20 de...</header>
         <div class="general">
-          <img src="" alt="Wealther" />
+          <div>
+            <img src="background image.jpg" alt="Wealther" />
+            <span>Mostly sun </span>
+          </div>
           <p>
-            <span>....°</span>
+            <span id="Degre">34°</span><br />
             <span>During</span>
           </p>
         </div>
