geocoding and wether data was setting

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <div class="container">
       <div class="search">
-        <input value="USA" title="choose your country" />
-        <select id="Days">
+        <input placeholder="Pays/Region" title="choose your country" />
+        <select id="days">
           <option value="Today">Today</option>
           <option value="Tomorrow">Tomorrow</option>
           <option value="#">...</option>
@@ -22,7 +22,7 @@
         <div class="general">
           <div>
             <img src="background image.jpg" alt="Wealther" />
-            <span>Mostly sun </span>
+            <span id="describe">Mostly sun </span>
           </div>
           <p>
             <span id="Degre">34°</span><br />
@@ -35,13 +35,11 @@
             Humidity<br />
             4343
           </section>
-          <section id="visibility">
-            Visibility <br />
-            1324
-          </section>
+          <section id="visibility">Visibility <br /></section>
         </div>
       </div>
     </div>
+    <script src="dynamism.js"></script>
   </body>
 </html>
 
