icon and research tools up added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="search">
         <input placeholder="Pays/Region" title="choose your country" />
-        <select id="days">
+        <select id="days ">
           <option value="Today">Today</option>
           <option value="Tomorrow">Tomorrow</option>
           <option value="#">...</option>
@@ -17,29 +17,27 @@
         </select>
       </div>
 
-      <div class="trunk">
-        <header>Monday 20 de...</header>
+      <div class="trunk hide">
+        <header>Today</header>
         <div class="general">
           <div>
-            <img src="background image.jpg" alt="Wealther" />
-            <span id="describe">Mostly sun </span>
+            <img src="" alt="" />
+            <span id="describe"></span>
           </div>
           <p>
-            <span id="Degre">34°</span><br />
-            <span>During</span>
+            <span id="Degre"></span><br />
+            <span></span>
           </p>
         </div>
         <div class="details">
-          <section id="pressure">Pressure <br />123</section>
-          <section id="humidity">
-            Humidity<br />
-            4343
-          </section>
-          <section id="visibility">Visibility <br /></section>
+          <section id="pressure"></section>
+          <section id="humidity"></section>
+          <section id="visibility"></section>
         </div>
       </div>
     </div>
     <script src="dynamism.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
 
